src/styles.css
:root {
   --background-blue: #9fcbee;
   --background-light-blue: #6497bf;

   --text-blue: #01016f;
   --text-gray: #5a5a5a;
   --text-red: #d8031c;
}

* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
}

body {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;

   background-color: var(--background-blue);

   width: 100vw;
   height: 100vh;
}

#home-page {
   display: grid;
   height: inherit;

   grid-template-rows: auto 1fr auto;
}

#header {
   text-align: center;

   padding: 1rem;

   font-size: clamp(1rem, 10vw, 2.2rem);
   font-weight: 700;
   color: var(--text-gray);
}

#footer {
   width: 100vw;

   padding: 0.5rem;
   text-align: center;
   font-size: clamp(0.6rem, 2vw, 1rem);

   background-color: var(--background-light-blue);
}

#game-type {
   display: flex;
   flex-direction: column;

   align-items: center;
   justify-content: center;
   gap: 1rem;
}

button {
   width: auto;
   height: auto;

   padding: 1rem;
   margin: 0.4rem;

   font-size: clamp(1rem, 4vw, 1.4rem);
   font-weight: 600;
   color: var(--text-blue);
   background-color: var(--background-light-blue);

   outline: solid 0.2rem var(--text-gray);
   border-radius: 1rem;
   border: none;
}

button:hover {
   cursor: pointer;

   background-color: #4a7ba0;
   color: #0303b4;
}

button:active {
   background-color: var(--background-light-blue);
   color: var(--text-blue);
}

button img {
   width: min(3vw, 3vh);
   height: auto;
}

#current-turn {
   grid-area: 1 / 1 / 2 / -1;

   text-align: center;
   font-size: clamp(1.1rem, 5vw, 1.8rem);
   font-weight: 700;
   color: var(--text-gray);

   margin: 1rem;

   text-decoration: underline;
}

#place-ships-page {
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto auto 1fr;

   gap: 0.5rem;
}

#place-ships-header {
   grid-area: 2 / 1 / 3 / -1;
   display: flex;
   justify-content: center;
   gap: 1rem;
}

#ship-options {
   display: grid;
   grid-template-rows: auto 1fr;

   width: min(20vw, 20vh);
   height: min(70vw, 70vh);

   background-color: var(--background-light-blue);

   border: solid var(--text-blue) 0.5rem;
   border-radius: 1rem;
}

#header-text {
   color: var(--text-blue);
   font-size: clamp(1rem, 4vw, 1.5rem);
   font-weight: 700;
}

#options-header {
   border-bottom: solid var(--text-blue) 0.5rem;

   display: flex;
   align-items: center;
   flex-direction: column;
}

#rotate {
   font-size: clamp(0.7rem, 2vw, 1rem);
   padding: 0.7rem;
}

#drag-ships {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   background-color: transparent;

   padding: 1rem;
}

.drag-ship {
   display: flex;
   flex-direction: row;

   width: max-content;
}
.ship-square {
   width: min(2.5vw, 2.5vh);
   height: min(2.5vw, 2.5vh);

   border: solid var(--text-blue) 0.2rem;
}

#error-text {
   display: none;

   margin: 0.5rem;
   text-align: center;
   font-size: clamp(1rem, 2.5vw, 1.5rem);

   font-weight: 700;
   color: var(--text-red);
}

#guessing-grids {
   display: flex;
   flex-wrap: wrap;
}

.grid {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
   gap: 0.2rem;

   border: solid 1rem var(--text-blue);
   background-color: var(--text-gray);
}

#placement-grid {
   width: min(70vw, 70vh);
   height: min(70vw, 70vh);
}

#player-placement-grid,
#enemy-guess-grid {
   margin: 1rem;

   width: min(60vw, 60vh);
   height: min(60vw, 60vh);
}

.grid-item {
   display: flex;
   justify-content: center;
   align-items: center;

   background-color: var(--background-blue);
   font-size: min(2vw, 2.5vw);
}

.ship-grid-item {
   color: var(--text-red);
}

.hit-grid-item {
   color: var(--text-gray);
}

.guess-item {
   cursor: pointer;
}

.guess-item:hover {
   background-color: #b2d7f5;
}

#game-over,
#pass-text {
   font-size: clamp(2rem, 6vw, 3vw);
   font-weight: 700;
   color: var(--text-blue);

   margin: 1rem;
}

#status {
   font-size: clamp(1.5rem, 4vw, 2vw);
   font-weight: 700;
   color: var(--text-gray);

   margin: 1rem;
}

